apps/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Uncomment the next line to restrict access by IP
    # nginx.ingress.kubernetes.io/whitelist-source-range: "YOUR_IP/CIDR"
    # Uncomment the next line to use basic-auth (requires secret)
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: traefik-dashboard-auth
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: traefik.fle.api64.de
    http:
      paths:
      - path: /dashboard(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 8080
